--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: rodrigof22/ask-store-demo:latest # Change this to your DockerHub username and repository name
+          tags: rodrigof22/ask-store-demo # Change this to your DockerHub username and repository name
 
       - name: Log out from DockerHub
         run: docker logout
