--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Images
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  build-and-push-ai-service:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,14 +20,196 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN}}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image for ai-service
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./src/ai-service
           push: true
-          tags: rodrigof22/ask-store-demo # Change this to your DockerHub username and repository name
+          tags: rodrigof22/ask-store-demo:latest
+
+      - name: Log out from DockerHub
+        run: docker logout
+
+  build-and-push-makeline-service:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image for makeline-service
+        uses: docker/build-push-action@v2
+        with:
+            context: ./src/makeline-service
+            push: true
+            tags: rodrigof22/ask-store-demo:latest
+
+      - name: Log out from DockerHub
+        run: docker logout
+
+  build-and-push-order-service:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image for order-service
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/order-service
+          push: true
+          tags: rodrigof22/ask-stroe-demo:latest
+
+      - name: Log out from DockerHub
+        run: docker logout
+
+  build-and-push-product-service:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image for product-service
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/product-service
+          push: true
+          tags: rodrigof22/ask-store-demo:latest
+
+      - name: Log out from DockerHub
+        run: docker logout
+
+  build-and-push-store-admin:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image for store-admin
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/store-admin
+          push: true
+          tags: rodrigof22/ask-store-demo:latest
+
+      - name: Log out from DockerHub
+        run: docker logout
+
+  build-and-push-store-front:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image for store-front
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/store-front
+          push: true
+          tags: rodrigof22/ask-store-demo:latest
+
+      - name: Log out from DockerHub
+        run: docker logout
+
+  build-and-push-virtual-customer:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image for virtual-customer
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/virtual-customer
+          push: true
+          tags: rodrigof22/ask-store-demo:latest
+
+      - name: Log out from DockerHub
+        run: docker logout
+
+  build-and-push-virtual-worker:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image for virtual-worker
+        uses: docker/build-push-action@v2
+        with:
+          context: ./src/virtual-worker
+          push: true
+          tags: rodrigof22/ask-store-demo:latest
 
       - name: Log out from DockerHub
         run: docker logout
