--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,9 +6,47 @@ on:
       - main
 
 jobs:
+  filter:
+    runs-on: ubuntu-latest
+    outputs:
+      makeline-service: ${{ steps.filter.outputs.makeline-service }}
+      order-service: ${{ steps.filter.outputs.order-service }}
+      product-service: ${{ steps.filter.outputs.product-service }}
+      store-front: ${{ steps.filter.outputs.store-front }}
+      store-admin: ${{ steps.filter.outputs.store-admin }}
+      virtual-customer: ${{ steps.filter.outputs.virtual-customer }}
+      virtual-worker: ${{ steps.filter.outputs.virtual-worker }}
+      ai-service: ${{ steps.filter.outputs.ai-service }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Filter changes
+        id: filter
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            makeline-service:
+              - 'src/makeline-service/**'
+            order-service:
+              - 'src/order-service/**'
+            product-service:
+              - 'src/product-service/**'
+            store-front:
+              - 'src/store-front/**'
+            store-admin:
+              - 'src/store-admin/**'
+            virtual-customer:
+              - 'src/virtual-customer/**'
+            virtual-worker:
+              - 'src/virtual-worker/**'
+            ai-service:
+              - 'src/ai-service/**'
+  
   build-and-push-ai-service:
     runs-on: ubuntu-latest
-
+    needs: filter
+    if: needs.filter.outputs.ai-service == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -34,7 +72,8 @@ jobs:
 
   build-and-push-makeline-service:
     runs-on: ubuntu-latest
-
+    needs: filter
+    if: needs.filter.outputs.makeline-service == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -60,7 +99,8 @@ jobs:
 
   build-and-push-order-service:
     runs-on: ubuntu-latest
-
+    needs: filter
+    if: needs.filter.outputs.order-service == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -86,7 +126,8 @@ jobs:
 
   build-and-push-product-service:
     runs-on: ubuntu-latest
-
+    needs: filter
+    if: needs.filter.outputs.product-service == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -112,7 +153,8 @@ jobs:
 
   build-and-push-store-admin:
     runs-on: ubuntu-latest
-
+    needs: filter
+    if: needs.filter.outputs.store-admin == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -138,7 +180,8 @@ jobs:
 
   build-and-push-store-front:
     runs-on: ubuntu-latest
-
+    needs: filter
+    if: needs.filter.outputs.store-front == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -164,7 +207,8 @@ jobs:
 
   build-and-push-virtual-customer:
     runs-on: ubuntu-latest
-
+    needs: filter
+    if: needs.filter.outputs.virtual-customer == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -190,7 +234,8 @@ jobs:
 
   build-and-push-virtual-worker:
     runs-on: ubuntu-latest
-
+    needs: filter
+    if: needs.filter.outputs.virtual-worker == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
